--- a/writeup/writeup_erika_garzaelorduy.qmd
+++ b/writeup/writeup_erika_garzaelorduy.qmd
@@ -24,7 +24,7 @@ In the absence of prior data or specific effect size estimates from our study to
 
 ### Planned Sample
 
-For our replication experiment, we would require at least a sample size of 298 participants. In the original study, the participants were students from the University of California, Berkeley or members from the nearby community who were randomly assigned to different conditions to assess the influence of decision speed on moral evaluations. However, participants for this replication study will be recruited through the data collection platform, Prolific.
+For our replication experiment, we would require at least a sample size of 298 participants. In the original study, the participants were students from the University of California, Berkeley or members from the nearby community who were randomly assigned to different conditions to assess the influence of decision speed on moral evaluations. However, participants for this replication study will be recruited through the data collection platform, Prolific, and will be screened for residing in the US and being fluent in English.
 
 ### Materials
 
@@ -143,7 +143,7 @@ The difference from the original study is the participant sample. The participan
 
 #### Actual Sample
 
-For our replication experiment, we would require at least a sample size of 298 participants. In the original study, the 119 participants were students from the University of California, Berkeley or members from the nearby community who were randomly assigned to different conditions to assess the influence of decision speed on moral evaluations. However, participants for this replication study will be recruited through the data collection platform, Prolific.
+For our replication experiment, we would require at least a sample size of 298 participants. In the original study, the 119 participants were students from the University of California, Berkeley or members from the nearby community who were randomly assigned to different conditions to assess the influence of decision speed on moral evaluations. However, participants for this replication study will be recruited through the data collection platform, Prolific, and only screened for residing in the US and being fluent in English.
 
 #### Differences from pre-data collection methods plan
 
@@ -161,7 +161,7 @@ Our replication of Experiment 1 will closely mirror the original study’s 2x2 f
 library(tidyverse)
 
 #### Define the directory containing your CSV files
-directory_path <- "../data/osfstorage-archive"
+directory_path <- "../data/pilotB"
 
 #### Initialize an empty tibble to store all cleaned data
 cleaned_data <- tibble()
@@ -213,7 +213,7 @@ for (file in file_list) {
 print(cleaned_data)
 
 #### Define the output path for the final cleaned CSV file
-output_path <- "../data/cleaned_data.csv"
+output_path <- "../data/cleaned_data_pilotB.csv"
 
 #### Save the final combined cleaned_data tibble as a CSV file
 write_csv(cleaned_data, output_path)
@@ -236,7 +236,7 @@ library(dplyr)
 library(car)
 library(emmeans)
 
-dat <- read.csv("../data/cleaned_data.csv")
+dat <- read.csv("../data/cleaned_data_pilotB.csv")
 
 avg_score <- dat %>% 
   mutate(
